--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 asgiref==3.8.1
+cloudinary==1.40.0
 dj-database-url==2.2.0
+dj3-cloudinary-storage==0.0.6
 Django==5.0.6
 django-allauth==0.63.3
 django-bootstrap5==24.2
 django-crispy-forms==2.2
 django-environ==0.11.2
+django-summernote==0.8.20.0
 django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
 gunicorn==22.0.0
+oauthlib==3.2.2
 pillow==10.3.0
+requests-oauthlib==2.0.0
 sqlparse==0.5.0
+urllib3==2.2.1
 whitenoise==6.7.0
