--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 cloudinary==1.40.0
+crispy-bootstrap5==2024.2
 dj-database-url==2.2.0
 dj3-cloudinary-storage==0.0.6
 Django==5.0.6
@@ -13,8 +14,8 @@ djangorestframework==3.15.2
 gunicorn==22.0.0
 oauthlib==3.2.2
 pillow==10.3.0
+psycopg2-binary==2.9.9
 requests-oauthlib==2.0.0
 sqlparse==0.5.0
 urllib3==2.2.1
 whitenoise==6.7.0
-psycopg2-binary
