--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 asgiref==3.8.1
 cloudinary==1.40.0
 crispy-bootstrap5==2024.2
@@ -5,16 +6,20 @@ dj-database-url==2.2.0
 dj3-cloudinary-storage==0.0.6
 Django==5.0.6
 django-allauth==0.63.3
+django-bootstrap-datepicker-plus==5.0.5
 django-bootstrap5==24.2
 django-crispy-forms==2.2
 django-environ==0.11.2
 django-summernote==0.8.20.0
+django-tempus-dominus==5.1.2.17
 django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
 gunicorn==22.0.0
 oauthlib==3.2.2
 pillow==10.3.0
 psycopg2-binary==2.9.9
+pydantic==2.8.2
+pydantic_core==2.20.1
 requests-oauthlib==2.0.0
 sqlparse==0.5.0
 urllib3==2.2.1
