--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 annotated-types==0.7.0
 asgiref==3.8.1
-cloudinary==1.40.0
+autobahn==23.6.2
+Automat==22.10.0
+channels==4.1.0
+cloudinary==1.36.0
+constantly==23.10.4
 crispy-bootstrap5==2024.2
+daphne==4.1.2
 dj-database-url==2.2.0
 dj3-cloudinary-storage==0.0.6
 Django==5.0.6
@@ -10,17 +15,28 @@ django-bootstrap-datepicker-plus==5.0.5
 django-bootstrap5==24.2
 django-crispy-forms==2.2
 django-environ==0.11.2
+django-storages==1.14.3
 django-summernote==0.8.20.0
 django-tempus-dominus==5.1.2.17
 django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
 gunicorn==22.0.0
+hyperlink==21.0.0
+incremental==22.10.0
 oauthlib==3.2.2
 pillow==10.3.0
 psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.8.2
 pydantic_core==2.20.1
+pyOpenSSL==24.1.0
 requests-oauthlib==2.0.0
+service-identity==24.1.0
+shortuuid==1.0.13
 sqlparse==0.5.0
+Twisted==24.3.0
+txaio==23.1.1
 urllib3==2.2.1
 whitenoise==6.7.0
+zope.interface==6.4.post2
