--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-allauth==0.63.3
 django-bootstrap-datepicker-plus==5.0.5
 django-bootstrap5==24.2
 django-crispy-forms==2.2
+django-db-connection-pool==1.2.5
 django-environ==0.11.2
 django-storages==1.14.3
 django-summernote==0.8.20.0
@@ -22,6 +23,7 @@ django-tempus-dominus==5.1.2.17
 django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
 docopt==0.6.2
+greenlet==3.0.3
 gunicorn==22.0.0
 hyperlink==21.0.0
 incremental==22.10.0
@@ -39,6 +41,8 @@ pyOpenSSL==24.1.0
 requests-oauthlib==2.0.0
 service-identity==24.1.0
 shortuuid==1.0.13
+SQLAlchemy==2.0.31
+sqlparams==6.0.1
 sqlparse==0.5.0
 Twisted==24.3.0
 txaio==23.1.1
