--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ hyperlink==21.0.0
 incremental==22.10.0
 ipython==8.12.3
 oauthlib==3.2.2
+pdf2image==1.17.0
 pickleshare==0.7.5
 pillow==10.3.0
 pipreqs==0.5.0
